# fenrir_loader_experiment

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  iso-path-list  libyaul.specs  mednafen.bat  opm.freq.tmp  readme.md
.devcontainer/: Dockerfile  devcontainer.json
assets/: BMspaceA9.bff  SmallFonts_12.bff  Sprite-0001.aseprite  Sprite-0004.aseprite  Street Fighter Alpha Regular.bff  army12.c  bitmap.c  bitmap.h  dashboard.ase  error_bad_filesystem.ase  game_select.psd  hado.pcm  hav_flag.h  map.psd  marvel_fenrir.h  mvsc_bg.h  rexlia_16.bff  rexlia_16.c  sd-wifi.aseprite  sfa.c  test.c  test.h  theme.h  themes_sega_army_12.bff  ui_font.h  vdp2.h
cmake/: libyaul.ld  yaul.cmake
mikmod/libmikmod/drivers/: drv_scsp_m68k.c
mikmod/libmikmod/saturn/: Makefile  driver.c  driver.ld  driver.map  mem.c
src/: bios_ex.h  bram.c  bram.h  compat.c  dbg.c  dbg.h  fenrir.config.h  libyaul.ld  main.c  message_box.c  message_box.h  noise.c  noise.h  reset.c  sphere.h  theme.c  theme.h  ui.c  ui.config.c  ui.config.h  ui.h  vdp1.config.c  vdp1.config.h  vdp2.config.c  vdp2.config.h
src/fastlz/: fastlz.c
src/fenrir/: cd-miss.h  fenrir.asserts.c  fenrir.c  fenrir.dir_op.c  fenrir.h  menu.sectors.h  readme.md  region.c  region.h  sd_dir.h
src/fenrir/fileio/: fileio.c  fileio.h  readme.md
src/font/: font.c  font.h
src/screens/: bram_backup.c  bram_backup.h  bram_restore.c  browser.c  browser.h  credits.c  credits.h  diagnostic.c  diagnostic.h  error.c  error.h  gamelist.c  gamelist.h  gamelist_theme.c  options.c  options.h  screen.c  screen.h  screens.c  screens.h
src/sound_driver/: elysium.h  hado.h  ken.raw.h  midi.c  midi.h  mkmod.h  mml_parser.c  mml_parser.h  pcm.c  pcm.h  pcmsys.h  pcmsys_y.c  scsp.h  sdrv.h  space_d.h  unreal.h
src/sound_driver/midi/: midi-parser.c  midi-parser.h
src/sound_driver/mod/: c669.c  dd.js  mod.c  modplay.c  modplay.h  scsp_perdiod_tbl.h
src/sound_driver/vgm/: 02 Opening  alex_kidd.h  atomic-robot-kid-bgma.h  build_2151_stable.js  build_2203_stable.js  build_snxx_table.js  coincoin.h  debug_vgm.h  mj.smooth.h  notes.h  sf2_ryu.h  sf2_title.h  sn76496.h  sn76496_sonic.h  sn_map.h  sound_table.h  test  test.c  tone_func.h  tr.h  vgm.c  vgm.h  volume_sn.js  xfo.h  ym2151.h  ym2203.h  ys.h
src/stdlib/: qsort.c
src/themes/demo/: theme.demo.h
src/themes/sfz3/: font.sfa.h  theme.c  theme.config.h  theme.demo.h  vdp2.sfz3.h
tests/odefs/: Makefile  odefs-test  odefs.c  odefs.h  test.c  utest.h
tools/: pcm.sin  pcm.sin.c  periodiq_noise_0xfe.be.pcm  periodiq_noise_0xfe.le.pcm  sample.noise.per.pcm  sample.pcm  sample.pcm.bak  sample.periodic.pcm  sample.square.pcm
tools/fonts/: a.out  bfg.cfg  bmspacea9.c  font  font.c
tools/grit/: gxplog.txt
tools/image/: package.json  tiles.js
tools/iso2bin/: EdcEcc.cpp  EdcEcc.h  Makefile  iso2bin  iso2bin.cpp
tools/shape/: math-table.js  perlin.js  sphere.generator.js  sphere.h
tools/themes/: Cargo.toml
tools/themes/src/: image.rs  main.rs
tools/tiler/: cc.txt  cli.ts  config.json  encode.ts  index copy.ts  index.ts  loader.theme.ksy  package-lock.json  package.json  ressources.ts  struct.h.tmp  theme.h  theme.jsonc  theme.ts  tiler.ts  tsconfig.json  vd2p.7z  vdp2tiler.ts
tools/tiler/test/: test  test.c
tools/tonegenerator/: node-tonegenerator.js  samples.pcm
tools/vgmplay/: CMakeLists.txt
tools/vgmplay/src/: play.c  trk  trk.h  vgm.c  vgm.h
tools/vtheme/: global.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
tools/vtheme/src/: App.vue  main.ts
tools/vtheme/src/assets/: base.css  main.scss
tools/vtheme/src/components/: FenrirBackground.vue  FenrirConfig.vue  Resizable.vue
tools/vtheme/src/components/image/: UploadContent.vue
tools/vtheme/src/components/screens/: GameList.vue
tools/vtheme/src/components/ui/: Area.vue  BackgroundSetting.vue  FontEditor.vue  ItemColor.vue
tools/vtheme/src/models/: screens.ts
tools/vtheme/src/pages/: Home.vue
tools/vtheme/src/pages/screens/: GameList.vue
tools/vtheme/src/services/: ExportFenrirThemeConfig.ts  FontBuilder.ts  Utils.ts  VDP2Tiler.ts
tools/vtheme/src/store/: ThemeConfig.ts
